# fastapi_mongo_async

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
mock_data/: news_mock_data.json  product_mock_data.json
src/: main.py
src/core/: auth.py  config.py  database.py  logger.py
src/hotline_parser/: main.py
src/hotline_parser/core/: config.py  database.py  exceptions.py
src/hotline_parser/models/: news.py  product.py
src/hotline_parser/repositories/: news_repository.py  product_repository.py
src/hotline_parser/routers/: news.py  products.py
src/hotline_parser/schemas/: news.py  product.py
src/hotline_parser/services/: browser_client.py  news_parser.py  product_parser.py
src/repositories/: product_repository.py
src/routers/: admin.py  news.py  products.py
src/schemas/: product.py
src/services/: browser_client.py  news_parser.py  product_parser.py  scheduler.py
tests/: conftest.py
