[tool.poetry]
name = "hotline-parser"
version = "0.1.0"
description = "Async service for parsing products and news"
authors = ["SOLOVKA DMYTRO <devdjangoreact@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
pydantic = "^2.5.0"
motor = "^3.3.2"
httpx = "^0.25.2"
playwright = "^1.39.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
start = "hotline_parser.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true